--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Håvard Sollie">
     <meta name="description" content="Sport i Oslo provides the latest results from different sport competitions in the capital. Football and Icehockey are the primary sports.">
-    <link rel="stylesheet"  type="text/css" href="css/styles.css"> 
+    <link rel="stylesheet"  type="text/css" href="/css/styles.css"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
